<resources>
    <string name="app_name">NasaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="covi_hack">Covi Hack</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="if_you_don_t_have_account">if you don\'t have account</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
</resources>